# frontend-web/src/models/Habit.js
@@ -1,0 +1,20 @@
+/**
+ * @typedef {Object} HabitDTO
+ * @property {number} id
+ * @property {string} title
+ * @property {string|null} description
+ * @property {'habit'|'task'} type
+ * @property {'daily'|'weekly'} frequency
+ * @property {boolean} is_active
+ * @property {string} created_at
+ * @property {string} updated_at
+ */
+
+/**
+ * @typedef {Object} HabitFormDTO
+ * @property {string} title
+ * @property {string|null} description
+ * @property {'habit'|'task'}
+ * @property {'daily'|'weekly'}
+ * @property {boolean} is_active
+ */
